# path_optimizer

./: .gitignore  CMakeLists.txt  LICENSE  MpcPathOptimizer.cpp  README.md  mpc_path_optimizer_demo.cpp  package.xml  spline.h
cmake/: FindIPOPT.cmake  path_optimizerConfig.cmake
config/: rvizConfig.rviz
include/: FgEvalFrenet.hpp  FgEvalFrenetSmooth.hpp  FgEvalReferenceSmoothing.hpp  FgEvalReferenceSmoothingFrenet.hpp  MpcPathOptimizer.hpp  collosion_checker.hpp  path_optimizer.hpp
include/config/: config.hpp
include/data_struct/: data_struct.hpp
include/path_optimizer/: path_optimizer.hpp  solver_interface.hpp
include/path_optimizer/config/: config.hpp  planning_flags.hpp
include/path_optimizer/data_struct/: data_struct.hpp  reference_path.hpp  reference_path_impl.hpp  vehicle_state_frenet.hpp
include/path_optimizer/reference_path_smoother/: angle_diff_smoother.hpp  cartesian_reference_path_smoother.hpp  frenet_reference_path_smoother.hpp  qp_smoother.hpp  reference_path_smoother-in.hpp  reference_path_smoother.hpp  tension_smoother.hpp  tension_smoother_2.hpp
include/path_optimizer/solver/: solver.hpp  solver_factory.hpp  solver_k_as_input.hpp  solver_kp_as_input.hpp  solver_kp_as_input_constrained.hpp
include/path_optimizer/tools/: Map.hpp  car_geometry.hpp  collosion_checker.hpp  eigen2cv.hpp  tools.hpp
include/reference_path_smoother/: FgEvalReferenceSmoothing.hpp  FgEvalReferenceSmoothingFrenet.hpp  cartesian_reference_path_smoother.hpp  frenet_reference_path_smoother.hpp  reference_path_smoother.hpp
include/tools/: Map.hpp  car_geometry.hpp  collosion_checker.hpp  tools.hpp
launch/: demo.launch
libClothoids/include/: AABBtree.hh  BaseCurve_using.hxx  Biarc.hh  BiarcList.hh  Circle.hh  Clothoid.hh  ClothoidAsyPlot.hh  ClothoidList.hh  Fresnel.hh  G2lib.hh  Line.hh  PolyLine.hh  PolynomialRoots-Utils.hh  PolynomialRoots.hh  Triangle2D.hh
log/: path_optimizer_demo.ERROR  path_optimizer_demo.INFO  path_optimizer_demo.WARNING  path_optimizer_demo.ljn-G7-7588.ljn.log.INFO.20201225-005521.13567  path_optimizer_demo.ljn-G7-7588.ljn.log.INFO.20201225-005649.14466  path_optimizer_demo.ljn-G7-7588.ljn.log.INFO.20201225-010105.17640  path_optimizer_demo.ljn-G7-7588.ljn.log.INFO.20201225-011339.26732  path_optimizer_demo.ljn-G7-7588.ljn.log.WARNING.20201225-011350.26732
scripts/: build.sh  install_dependencies.sh  install_deps.sh
src/: MpcPathOptimizer.cpp  collision_checker.cpp  mpc_path_optimizer_benchmark.cpp  mpc_path_optimizer_demo.cpp  osqp_related.cpp  path_optimizer.cpp  path_optimizer_benchmark.cpp  test_eigen.cpp  test_spline.cpp
src/config/: planning_flags.cpp
src/data_struct/: date_struct.cpp  reference_path.cpp  reference_path_impl.cpp  vehicle_state_frenet.cpp
src/path_optimizer/: path_optimizer.cpp  solver_interface.cpp
src/reference_path_smoother/: angle_diff_smoother.cpp  cartesian_reference_path_smoother.cpp  frenet_reference_path_smoother.cpp  qp_smoother.cpp  reference_path_smoother.cpp  tension_smoother.cpp  tension_smoother_2.cpp
src/solver/: solver.cpp  solver_factory.cpp  solver_k_as_input.cpp  solver_kp_as_input.cpp  solver_kp_as_input_constrained.cpp
src/test/: demo.cpp  path_optimizer_benchmark.cpp  test_tools.cpp
src/tools/: Map.cpp  car_geometry.cpp  collision_checker.cpp  spline.cpp  tools.cpp
workspace/.catkin_tools/profiles/default/: config.yaml
workspace/src/path_optimizer/: CMakeLists.txt  package.xml
workspace/src/path_optimizer/include/path_optimizer/: path_optimizer.hpp  solver_interface.hpp
workspace/src/path_optimizer/include/path_optimizer/config/: config.hpp
workspace/src/path_optimizer/include/path_optimizer/data_struct/: data_struct.hpp
workspace/src/path_optimizer/include/path_optimizer/reference_path_smoother/: cartesian_reference_path_smoother.hpp
workspace/src/path_optimizer/include/path_optimizer/solver/: solver.hpp  solver_k_as_input.hpp  solver_kp_as_input.hpp  solver_kp_as_input_constrained.hpp
workspace/src/path_optimizer/include/path_optimizer/tools/: spline.h
workspace/src/path_optimizer/include/reference_path_smoother/: frenet_reference_path_smoother.hpp  reference_path_smoother.hpp
workspace/src/path_optimizer/include/tools/: spline.h  tools.hpp
workspace/src/path_optimizer/launch/: demo.launch
workspace/src/path_optimizer/src/data_struct/: date_struct.cpp  reference_path_impl.cpp
workspace/src/path_optimizer/src/path_optimizer/: path_optimizer.cpp  solver_interface.cpp
workspace/src/path_optimizer/src/reference_path_smoother/: cartesian_reference_path_smoother.cpp  frenet_reference_path_smoother.cpp  reference_path_smoother.cpp
workspace/src/path_optimizer/src/solver/: solver.cpp  solver_k_as_input.cpp  solver_kp_as_input.cpp  solver_kp_as_input_constrained.cpp
workspace/src/path_optimizer/src/test/: demo.cpp  path_optimizer_benchmark.cpp
workspace/src/path_optimizer/src/tools/: Map.cpp  collision_checker.cpp  spline.cpp  tools.cpp
workspace/src/trajectory_optimizer/: CMakeLists.txt  package.xml  plot.py  ref_v.csv  v.csv
workspace/src/trajectory_optimizer/config/: rvizConfig.rviz
workspace/src/trajectory_optimizer/include/trajectory_optimizer/: trajectory_optimizer.hpp
workspace/src/trajectory_optimizer/include/trajectory_optimizer/data_struct/: data_struct.hpp
workspace/src/trajectory_optimizer/include/trajectory_optimizer/reference_provider/: reference_provider.hpp
workspace/src/trajectory_optimizer/include/trajectory_optimizer/solver/: solver.hpp  solver_ipopt_interface.hpp  solver_ipopt_kpvp.hpp  solver_osqp_interface.hpp  solver_osqp_kpvp.hpp  solver_vc.hpp
workspace/src/trajectory_optimizer/launch/: demo.launch
workspace/src/trajectory_optimizer/src/data_struct/: data_struct.cpp
workspace/src/trajectory_optimizer/src/reference_provider/: reference_provider.cpp
workspace/src/trajectory_optimizer/src/solver/: solver.cpp  solver_ipopt_kpvp.cpp  solver_osqp_kpvp.cpp  solver_vc.cpp
workspace/src/trajectory_optimizer/src/test/: demo.cpp
workspace/src/trajectory_optimizer/src/trajectory_optimizer/: trajectory_optimizer.cpp
